--- a/01.circuits and time evolution.1.x.ipynb
+++ b/01.circuits and time evolution.1.x.ipynb
@@ -1285,6 +1285,99 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3743ffd6-159d-47d8-8d2e-66386f68d6c0",
+   "metadata": {},
+   "source": [
+    "### 2.1.5 Universal Quantum Gates\n",
+    "\n",
+    "A set of quantum gates is considered **universal** for quantum computation if it can be used to approximate any unitary operation to arbitrary accuracy. There are different universality constructions for quantum computing:\n",
+    "\n",
+    "**Universality Theorem**\n",
+    "\n",
+    "The set $\\{R_x(\\theta), R_y(\\theta),R_z(\\theta), CNOT\\}$ is universal. In the worst case, the number of gates in the decomposition scales as $O(n^3 4^n)$ [ https://arxiv.org/abs/quant-ph/9503016 ].  It is worth noting that a decomposition requiring $O(4^n)$ CNOT gates was derived in [ https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.93.130502 ].\n",
+    "\n",
+    "We outline the proof below:\n",
+    "\n",
+    "#### Step 1: Two-level unitary gates are universal\n",
+    "\n",
+    "Let us start with a $d \\times d$ unitary matrix $A_d$, whose elements are denoted by $a_{ij}$. Find the smallest value of $j > 1$ such that $a_{j1} \\neq 0$. This element can be set to zero by multiplying $A_d$ with a two-level unitary matrix given by:\n",
+    "\n",
+    "$$\n",
+    "U^\\dagger = \n",
+    "\\begin{pmatrix}\n",
+    "    \\frac{a_{11}^*}{\\sqrt{|a_{11}|^2 + |a_{j1}|^2}} & \\mathbb{0} & \\frac{a_{j1}^*}{\\sqrt{|a_{11}|^2 + |a_{j1}|^2}} & \\mathbb{0} \\\\\n",
+    "    \\mathbb{0} & \\mathbb{1}_{j-2} & \\mathbb{0} & \\mathbb{0} \\\\\n",
+    "    \\frac{a_{j1}}{\\sqrt{|a_{11}|^2 + |a_{j1}|^2}} & \\mathbb{0} & \\frac{-a_{11}}{\\sqrt{|a_{11}|^2 + |a_{j1}|^2}} & \\mathbb{0} \\\\\n",
+    "    \\mathbb{0} & \\mathbb{0} & \\mathbb{0} & \\mathbb{1}_{d-j}\n",
+    "\\end{pmatrix},\n",
+    "$$\n",
+    "\n",
+    "where $\\mathbb{1}_d$ is the $d \\times d$ identity matrix, and $\\mathbb{0}$ denotes a matrix whose elements are all zero. \n",
+    "\n",
+    "In the worst-case scenario, $a_{j1} \\neq 0$ for all $j$. By iteratively applying these transformations, one obtains:\n",
+    "\n",
+    "$$\n",
+    "U^\\dagger_{d-1} \\cdots U^\\dagger_{1} A_d = \n",
+    "\\begin{pmatrix}\n",
+    "    1 & \\mathbb{0} \\\\\n",
+    "    \\mathbb{0} & A_{d-1}\n",
+    "\\end{pmatrix},\n",
+    "$$\n",
+    "\n",
+    "where $A_{d-1}$ is a $(d-1) \\times (d-1)$ unitary matrix. Repeating this process iteratively, we construct a sequence of $d(d-1)/2$ two-level unitary matrices:\n",
+    "\n",
+    "$$\n",
+    "A_d = U_1 U_2 \\cdots U_{d(d-1)/2}.\n",
+    "$$\n",
+    "\n",
+    "In an $n$-qubit system, $d = 2^n$, leading to a decomposition requiring $2^{n-1}(2^n - 1)$ two-level unitary matrices.\n",
+    "\n",
+    "#### Step 2: Single qubit and CNOT gates are universal\n",
+    "\n",
+    "A two-level unitary matrix $U$ represents a rotation in a two-dimensional subspace spanned by basis states $|i\\rangle$ and $|j\\rangle$, where $j > i$:\n",
+    "\n",
+    "$$\n",
+    "U = \\mathbb{1} - (|i\\rangle\\langle i| + |j\\rangle\\langle j|) + \\tilde{U},\n",
+    "$$\n",
+    "\n",
+    "where $\\tilde{U}$ is the non-trivial $2 \\times 2$ submatrix acting on this subspace.\n",
+    "\n",
+    "To construct a quantum circuit implementing $U$:\n",
+    "\n",
+    "1. Rotate $|i\\rangle$ to an intermediate state differing from $|j\\rangle$ by one qubit.\n",
+    "2. Apply $\\tilde{U}$ using controlled operations.\n",
+    "3. Rotate back to the original basis states.\n",
+    "\n",
+    "A **Gray code** can be used to determine intermediate states efficiently \\[Barenco:1995na\\]. Since two binary numbers can be connected in at most $O(n)$ steps, this implies at most $O(n)$ controlled operations are needed to implement $U$. Each controlled single-qubit gate can be decomposed into $\\{R_x(\\theta), R_y(\\theta), R_z(\\theta)\\}$ with $O(n^2)$ CNOT gates \\[Barenco:1995na\\]. More efficient decompositions exist [ https://arxiv.org/abs/0803.2316 ].\n",
+    "\n",
+    "**The Solovay-Kitaev Theorem**\n",
+    "\n",
+    "Any unitary operation can be approximated to arbitrary accuracy using the set \\{H, T, CNOT\\}.\n",
+    "\n",
+    "The Hadamard and T gates approximate any single-qubit unitary operation. The **Solovay-Kitaev theorem** states that an arbitrary single-qubit gate can be approximated to accuracy $\\epsilon$ using $O(\\log^c(1/\\epsilon))$ gates from this discrete set, where $c \\approx 2$. This ensures that even high-precision operations require only a manageable number of gates.\n",
+    "\n",
+    "In summary, **most unitary transformations cannot be implemented efficiently in general**, as they require an exponentially large number of operations: \n",
+    "\n",
+    "$$\n",
+    "O(4^n) = O(e^{2n \\ln 2}).\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "926c1c4b-84a5-48f1-9140-5da0c48735d9",
+   "metadata": {},
+   "source": [
+    "### 2.1.6 State preparation\n",
+    "\n",
+    "Given a universal gate set that includes the CNOT gate, the complexity of quantum circuits is typically measured by the number of CNOT gates required due to the fact that the physical realization of CNOT gates is significantly more demanding compared to single-qubit gates. Minimizing the number of CNOT gates in a quantum circuit is crucial for improving its practical efficiency and reliability, particularly on NISQ devices.\n",
+    "\n",
+    "\n",
+    "It is known that preparing a generic quantum state of $n$ qubits requires an exponential number of CNOT gates, scaling as $O(2^n)$ (see, e.g., https://journals.aps.org/pra/abstract/10.1103/PhysRevA.83.032302). A universal quantum computer starts with a definite initial state, such as $|00\\cdots 0\\rangle$, according to the Divincenzo criteria. In contrast, a generic $n$-qubit quantum state is described by $2^n$ complex coefficients (subject to a normalization constraint), which specify the amplitudes of all possible computational basis states.  The exponential scaling of resources, including the number of CNOT gates, reflects the fact that an arbitrary quantum state can encode exponentially many degrees of freedom.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "40dbcd22-99f1-453f-abda-913d2e480cc6",
    "metadata": {},
    "source": [
@@ -1857,7 +1950,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
