--- a/01.circuits and time evolution.1.x.ipynb
+++ b/01.circuits and time evolution.1.x.ipynb
@@ -1378,12 +1378,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c353e03-fafb-4662-b333-8dba3aa392a2",
+   "metadata": {},
+   "source": [
+    "## 2.2 Simulations of quantum systems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "40dbcd22-99f1-453f-abda-913d2e480cc6",
    "metadata": {},
    "source": [
-    "## 2.2 Simulations of quantum systems\n",
+    "### 2.2.1 Time evolution of quantum systems\n",
     "\n",
-    "### Schrödinger Picture\n",
+    "**Schrödinger Picture**\n",
     "\n",
     "Consider a system whose dynamics are governed by a Hamiltonian operator $\\hat{H}$. In the **Schrödinger picture**, the **state vectors** (or wave functions) evolve over time, while the **operators** corresponding to physical observables remain unchanged. The time evolution of the state vector, $|\\psi(t)\\rangle$, is governed by the **Schrödinger equation**:\n",
     "\n",
@@ -1392,7 +1400,7 @@
     "\n",
     "where $\\hbar$ represents the reduced Planck constant. For simplicity, we work in natural units where $\\hbar = 1$, and assume that the Hamiltonian operator $\\hat{H}$ is time-independent.\n",
     "\n",
-    "### Evolution Operator\n",
+    "**Evolution Operator**\n",
     "\n",
     "The **evolution operator**, $\\hat{U}(t)$, governs the time evolution of the quantum state. It is given by:\n",
     "\n",
@@ -1408,7 +1416,7 @@
     "\n",
     "Since $\\hat{H}$ is Hermitian, i.e., $\\hat{H}^\\dagger = \\hat{H}$, the evolution operator $\\hat{U}(t)$ is a unitary operator.\n",
     "\n",
-    "### Quantum Simulation Steps\n",
+    "**Quantum Simulation Steps**\n",
     "\n",
     "Simulation of a quantum system on universal quantum computers consists of the following steps:\n",
     "\n",
@@ -1977,9 +1985,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3cbd4d2-b07d-4d28-ae50-aa3454af0cfd",
+   "metadata": {},
+   "source": [
+    "### 2.2.2 Quantum Simulation Methods\n",
+    "\n",
+    "In general, directly approximating the full evolution operator $\\hat{U}(t)$ for the system is very difficult. Instead, the simulation is carried out by dividing the total time intervals $[0, t]$ into $n_t$ smaller time intervals with a time step $\\Delta t = t / n_t$. The quantum state, encoded on the qubits, is then evolved iteratively through these time intervals using an approximate evolution operator constructed for each time step.\n",
+    "\n",
+    "Compared to classical computers, quantum computers offer an exponential reduction in the memory required to represent both the quantum state and the evolution operator at each time step. However, as discussed in the previous section, preparing the initial quantum state and implementing the evolution operator as a quantum circuit can require an exponential number of CNOT gates, rendering the process intractable in general. The complexity can be further exacerbated by the fact that the **circuit depth**, defined as the number of sequential time steps during which gates are applied, also increases with the system size. Additionally, reconstructing the full information of $|\\psi(t)\\rangle$ generally requires $ O(2^n)$ projective measurements.  \n",
+    "\n",
+    "Nonetheless, in many physical problems, simulations on quantum computers require only a polynomial number of operations in $n$, $t$, and $1/\\epsilon$, where $\\epsilon$ represents the desired precision. Such types of simulations are considered **efficient**. Among efficient quantum simulations, it is known that the optimal scaling for the simulation of dynamics cannot be sublinear in $t$; that is, there does not exist a constant $c < 1$ such that the computational cost is $O(t^c)$. This is known as the **no-fast-forwarding theorem** [ https://arxiv.org/abs/quant-ph/0508139 ][ https://www.rintonpress.com/journals/doi/QIC10.7-8-7.html ].\n",
+    "\n",
+    "The main methods for quantum simulation include:\n",
+    "\n",
+    "#### Trotterization\n",
+    "This widely-used technique simulates the time evolution of quantum systems governed by a Hamiltonian. It decomposes the Hamiltonian into smaller, simpler terms, each of which can be evolved independently. The evolution operator is then approximated by the product of these terms, with the approximation improving as the time step becomes smaller. This method relies on the *Trotter-Suzuki decomposition*, enabling the simulation of complex quantum dynamics with controlled error margins. It is especially effective for systems where interactions can be separated into non-commuting parts.\n",
+    "\n",
+    "#### Taylor Series\n",
+    "This approach expands the time evolution operator as a power series, approximating the evolution of a quantum system over a small time interval. The Taylor series expansion is often used when the time step is small, providing accurate approximations. It is frequently combined with other methods, such as Trotterization, to improve the precision of quantum simulations. The accuracy of this method depends on the order of the expansion, with higher-order terms providing better approximations at the expense of increased computational complexity.\n",
+    "\n",
+    "#### Qubitization\n",
+    "This method converts the simulation of continuous-time Hamiltonians into a discrete process that operates on a qubit register. It facilitates the efficient simulation of Hamiltonian dynamics using a limited number of quantum gates, making it particularly suitable for quantum computers with a finite number of qubits. Qubitization typically involves decomposing the Hamiltonian into a sum of simple, diagonal terms and applying efficient quantum gates to simulate the effect of these terms on a quantum state. This method is particularly advantageous for simulating large-scale quantum systems, as it reduces the computational cost compared to direct simulation.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b47715f-fd2d-4152-8926-b9f39048c773",
+   "id": "ecf1a5ee-9a7f-40eb-9618-855a0562823a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2001,7 +2034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
